[tool.poetry]
name = "adbproxy"
version = "1.1.1"
description = "Proxy to access android devices attached to a remote machine via ADB"
readme = "README.md"
authors = ["Paulo Costa"]
packages = [
    { include = "adbproxy" },
]

[tool.poetry.scripts]
adbproxy = 'adbproxy:main'

[tool.poetry.dependencies]
python = "^3.7"
argcomplete = "^3.1.1"
asyncssh = "^2.19.0"
PyYAML = "^6.0"
aioupnp = {git = "https://github.com/paulo-raca/aioupnp.git", rev = "python3.10", optional=true}
aiobotocore = {version="^2.5.0", optional=true}

[tool.poetry.extras]
devicefarm = ["aiobotocore"]
upnp = ["aioupnp"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
pre-commit = {version = "^3.3.3", python = "^3.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 149

[tool.isort]
src_paths = ["adbproxy", "tests"]
profile = "black"
indent = 4
combine_star = true
combine_as_imports = true
lines_after_imports = 2
known_pytest = ["pytest"]
known_first_party = ["adbproxy"]
sections = ["FUTURE", "STDLIB", "PYTEST", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
