[project]
name = "adbproxy"
version = "1.1.1"
description = "Proxy to access android devices attached to a remote machine via ADB"
readme = "README.md"
authors = [{ name = "Paulo Costa" }]
requires-python = ">=3.10"
dependencies = [
    "argcomplete>=3.1.1",
    "asyncssh>=2.19.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
devicefarm = [
    "aiobotocore>=2.5.0",
    "aiohttp>=3.8",
]
upnp = [
    "aioupnp @ git+https://github.com/paulo-raca/aioupnp.git@python3.10",
]

[project.scripts]
adbproxy = "adbproxy:main"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "ty>=0.0.40",
    "pre-commit>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["adbproxy"]

[tool.ruff]
line-length = 139
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["adbproxy"]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.10"
