[project]
name = "adbproxy"
version = "1.1.1"
description = "Proxy to access android devices attached to a remote machine via ADB"
readme = "README.md"
authors = [{ name = "Paulo Costa" }]
requires-python = ">=3.10"
dependencies = [
    "argcomplete>=3.1.1",
    "asyncssh>=2.23.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
devicefarm = [
    "aiobotocore>=2.5.0",
    "botocore[crt]",
    "httpx>=0.25",
]
upnp = [
    "async-upnp-client>=0.40",
]

[project.scripts]
adbproxy = "adbproxy:main"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "ty>=0.0.49",
    "pre-commit>=4",
    "types-aiobotocore-devicefarm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["adbproxy"]

[tool.ruff]
line-length = 139
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["adbproxy"]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.10"
